--- a/src/utils/style/Header/header.scss
+++ b/src/utils/style/Header/header.scss
@@ -5,7 +5,7 @@ header {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 35px 50px;
+  margin: 40px 70px;
   .logo-header {
     width: 140px;
   }
