--- a/src/utils/style/HousingItem/housing-item.scss
+++ b/src/utils/style/HousingItem/housing-item.scss
@@ -1,26 +1,30 @@
 .housing-item {
   display: flex;
   flex-direction: column;
-  width: 300px;
-  height: 300px;
-  margin: 25px 0;
-  position: relative;
   cursor: pointer;
-  transition: transform 150ms ease-in-out;
-  &_img {
-    border-radius: 10px;
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-  }
-  &_title {
-    position: absolute;
-    bottom: 5px;
-    margin-left: 16px;
-    color: white;
-    font-weight: 500;
-  }
-  &:hover {
-    transform: scale(1.05);
+  .housing-link {
+    transition: transform 150ms ease-in-out;
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    height: 300px;
+    margin: 25px 0;
+    position: relative;
+    .housing-item_img {
+      border-radius: 10px;
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+    .housing-item_title {
+      position: absolute;
+      bottom: 5px;
+      margin-left: 16px;
+      color: white;
+      font-weight: 500;
+    }
+    &:hover {
+      transform: scale(1.05);
+    }
   }
 }
