--- a/src/utils/style/Variables/_variables.scss
+++ b/src/utils/style/Variables/_variables.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;700&display=swap');
 
 $primary-color: #FF6060;
 $bg-color-footer: black;
