--- a/src/utils/style/Carousel/carousel.scss
+++ b/src/utils/style/Carousel/carousel.scss
@@ -1,4 +1,3 @@
-
 .carousel {
   display: flex;
   justify-content: center;
@@ -8,53 +7,54 @@
   position: relative;
   border-radius: 0.8rem;
   &:hover {
-      .carousel-index {
-          opacity: 1;
-      }
+    .carousel-index {
+      opacity: 1;
+    }
   }
 
   &-wrapper {
-      display: flex;
-      transition: transform .5s ease;
+    display: flex;
+    transition: transform 0.5s ease;
+    width: 100%;
 
-      &_img {
-          flex-shrink: 0;
-          width: 100%;
-          height: 350px;
-          object-fit: cover;
-      }
+    &_img {
+      flex-shrink: 0;
+      width: 100%;
+      height: 350px;
+      object-fit: cover;
+    }
   }
 
   &-controls {
-      display: flex;
-      position: absolute;
-      width: 95%;
-      height: 100%;
-      margin: 0 10px;
-      justify-content: space-between;
-      &_chevron_left {
-          width: 45px;
-          height: auto;
-          font-size: 20px;
-          color: white;
-          cursor: pointer;
-      }
-      &_chevron_right {
-        width: 45px;
-        height: auto;
-        font-size: 20px;
-        color: white;
-        cursor: pointer;
+    display: flex;
+    position: absolute;
+    width: 95%;
+    height: 100%;
+    margin: 0 10px;
+    justify-content: space-between;
+    &_chevron_left {
+      width: 45px;
+      height: auto;
+      font-size: 20px;
+      color: white;
+      cursor: pointer;
+    }
+    &_chevron_right {
+      width: 45px;
+      height: auto;
+      font-size: 20px;
+      color: white;
+      cursor: pointer;
     }
   }
 
   &-index {
-      position: absolute;
-      color: white;
-      bottom: 10px;
-      font-size: 15px;
-      padding: 0.2rem 0.4rem;
-      opacity: 0;
-      transition: opacity 250ms ease-in-out;
+    position: absolute;
+    color: white;
+    bottom: 10px;
+    font-size: 15px;
+    padding: 0.2rem 0.4rem;
+    opacity: 0;
+    transition: opacity 250ms ease-in-out;
   }
 }
