--- a/src/utils/style/Collapse/collapse.scss
+++ b/src/utils/style/Collapse/collapse.scss
@@ -1,46 +1,40 @@
-@import "../Variables/variables";
+@import '../Variables/variables';
 
-.about-content {
+.collapse {
   display: flex;
   flex-direction: column;
-  width: 80%;
-  align-items: center;
-  margin: 0 auto;
-  .collapse {
+  width: 100%;
+  &-content {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    &-content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      &_name {
-        padding: 0 40px;
-        color: $primary-color;
-        line-height: 25px;
-        margin: 0 0 10px 0;
-      }
+    align-items: center;
+    justify-content: center;
+    &_name {
+      width: 90%;
+      padding: 0 40px;
+      color: $primary-color;
+      line-height: 25px;
+      margin: 0 0 10px 0;
     }
-    &-header {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-between;
-      background-color: $primary-color;
-      color: white;
-      border-radius: 5px;
-      margin: 20px;
-      height: 40px;
-      font-size: 14px;
-      &_title {
-        font-weight: 500;
-        margin: 0 15px;
-      }
-      &_chevron {
-        margin: 0 15px;
-        font-size: 20px;
-      }
+  }
+  &-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background-color: $primary-color;
+    color: white;
+    border-radius: 5px;
+    margin: 20px;
+    height: 40px;
+    font-size: 14px;
+    &_title {
+      font-weight: 500;
+      margin: 0 15px;
+    }
+    &_chevron {
+      margin: 0 15px;
+      font-size: 20px;
     }
   }
 }
