--- a/src/utils/style/Banner/banner.scss
+++ b/src/utils/style/Banner/banner.scss
@@ -20,3 +20,16 @@
     font-weight: 500;
   }
 }
+
+@media (max-width: 576px) {
+  .banner {
+    &-img {
+      height: 120px;
+      border-radius: 10px;
+    }
+    &-title {
+      font-size: 22px;
+      width: 80%;
+    }
+  }
+}
