--- a/src/utils/style/About/about.scss
+++ b/src/utils/style/About/about.scss
@@ -1,7 +1,10 @@
 .about-content {
   display: flex;
   flex-direction: column;
-  width: 80%;
+  width: 90%;
   align-items: center;
   margin: 0 auto;
+  .collapse-header {
+    margin: 15px 0;
+  }
 }
