--- a/src/utils/style/Error/error.scss
+++ b/src/utils/style/Error/error.scss
@@ -19,3 +19,19 @@
     margin: 100px 0 100px 0;
   }
 }
+
+@media (max-width: 576px) {
+  .error-msg {
+    margin: 0 auto;
+    width: 90%;
+    &_title {
+      font-size: 100px;
+      margin-top: 100px;
+    }
+    &_text {
+      font-size: 18px;
+      width: 80%;
+      text-align: center;
+    }
+  }
+}
