--- a/src/utils/style/Header/header.scss
+++ b/src/utils/style/Header/header.scss
@@ -18,7 +18,7 @@ header {
       font-size: 20px;
       color: $primary-color;
       text-decoration: none;
-      &:hover {
+      &:hover, &:focus {
         text-decoration: underline;
       }
     }
