--- a/src/utils/style/Footer/footer.scss
+++ b/src/utils/style/Footer/footer.scss
@@ -9,6 +9,9 @@ footer {
   height: 160px;
   font-weight: 500;
   position: relative;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   .logo-footer {
     position: absolute;
     top: 30%;
